Thrown exception when instances are empty